--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple Breakout</title>
+    <title>Maitree's Meta Breakout</title>
     <style>
         * { padding: 0; margin: 0; }
         canvas { background: #000; display: block; margin: 20px auto; }
